add container, slider, img, arrow

--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css' integrity='sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==' crossorigin='anonymous'/>
   <link rel="stylesheet" href="assets-slider/css/style.css">
   <title>Carosello Mono Array</title>
 </head>
 <body>
   
+  <main>
+    <div class="container">
+      <div class="slider">
+        <img src="assets-slider/img/01.webp">
+        <div class="arrow up">
+          <i class="fa-solid fa-chevron-up"></i>
+        </div>
+        <div class="arrow down">
+          <i class="fa-solid fa-chevron-down"></i>
+        </div>
+      </div>
+    </div>
+  </main>
+
   <script src="assets-slider/js/script.js"></script>
 
 </body>
