--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main>
     <div class="container">
       <div class="slider">
-        <img src="assets-slider/img/01.webp">
+        <!-- <img src="assets-slider/img/01.webp"> -->
         <div class="arrow up">
           <i class="fa-solid fa-chevron-up"></i>
         </div>
