--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="container">
       <div class="slider">
         <!-- <img src="assets-slider/img/01.webp"> -->
-        <div class="arrow up">
+        <div class="arrow prev">
           <i class="fa-solid fa-chevron-up"></i>
         </div>
-        <div class="arrow down">
+        <div class="arrow next">
           <i class="fa-solid fa-chevron-down"></i>
         </div>
       </div>
