--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   
   <main>
     <div class="container">
+      <div class="full"></div>
+
       <div class="slider">
         <div class="arrow prev">
           <i class="fa-solid fa-chevron-up"></i>
@@ -19,6 +21,7 @@
         <div class="arrow next">
           <i class="fa-solid fa-chevron-down"></i>
         </div>
+        
       </div>
     </div>
   </main>
